	- Added the missing space bar key for mapping controls in the launcher.
	- Added large and small medkit controls in the launcher.
	- Added deathmatch gamemode to the official server.
	- Fixed a few things.
	
- v1.1.3 (04-09-21):
	- Fixed a crash from v1.1.2 version.
	- Nerfed the desert eagle damage. It was (21 * 50 * pistol damage) now it's (17 * 50 * pistol damage) and doesn't kill with just 1 shot.
	- Several improvements to the scripting system to handle more stuff inside the engine (making possible the deathmatch gamemode and many others).
	
- v1.1.4 (06-09-21):
	- Fixed crash when firing a gun outside room bounds.
	- Fixed crash while an army smg enemy is in the level.
	- Fixed crash when killing a monkey.
	- Fixed crash when trying to request the item room of an invalid item.
	- Fixed crash when player has a bad animation.
	- Qwop when respawning fixed.
	- Removed the sprint limitation (now you can sprint after stopping if you still have sprint energy, like TR4 and TR5).
	- Fixed the ghetto registry edit bypass to connect to hamachi servers. Now you only need to connect to the hamachi network and you can connect by selecting the server in the launcher.
	- AI is now properly synced across players and they won't die mid air and cause weird animation bugs or AI stuck situations (to be heavily tested).
	
- v1.1.5 (06-11-21):
	- Fixed bug when trying to fly while in vehicle, flying in vehicles are blocked so there won't be any more bugs.
	- Fixed player explosion not being synced properly with players.
	- Added new several client and server scripting functions:
		· setCameraPosition.
		· getCameraRoom.
		· setCameraRoom.
		· getCameraType.
		· setCameraType.
		· getCameraItem.
		· setCameraItem.
		· getCameraTarget.
		· setCameraTarget.
		· getItemFromEntity.
		· getItemsTable (client and server).
		· asEntity (client and server).
		· isEntity (client and server).
		· killCreature.
	
	
	
	
	
	
	
	
	
	
	
	
	
	